[gd_scene load_steps=13 format=3 uid="uid://bcnqdsellj43u"]

[ext_resource type="Script" uid="uid://b2xyhws4i6fba" path="res://MainMenu/menu_template.gd" id="1_jl2ug"]

[sub_resource type="LabelSettings" id="LabelSettings_1ccxm"]
font_size = 32
outline_color = Color(0, 0, 0, 1)
shadow_size = 2
shadow_color = Color(0, 0, 0, 0.717647)
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_04mby"]
bg_color = Color(0.6, 0.102, 0.102, 1)
skew = Vector2(-0.5, 0)
border_width_left = 12
border_color = Color(0.410658, 0.0562801, 0.0563991, 1)
border_blend = true
expand_margin_right = 55.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xl12c"]
bg_color = Color(0.17878, 0.707651, 0.413564, 1)
skew = Vector2(-0.5, 0)
border_width_left = 12
border_color = Color(0.024, 0.6, 0.072, 1)
border_blend = true
expand_margin_right = 55.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ccxm"]
bg_color = Color(1, 0.57, 0.14, 1)
skew = Vector2(-0.5, 0)
border_width_left = 12
border_color = Color(0.8, 0.453333, 0, 1)
border_blend = true

[sub_resource type="Animation" id="Animation_1ccxm"]
resource_name = "opcoeschegando"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OptionsButtons:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-144, -73), Vector2(37, -73)]
}

[sub_resource type="Animation" id="Animation_04mby"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OptionsButtons:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(37, -73)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_04mby"]
_data = {
&"RESET": SubResource("Animation_04mby"),
&"opcoeschegando": SubResource("Animation_1ccxm")
}

[sub_resource type="Animation" id="Animation_xl12c"]
resource_name = "entrou"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OptionsButtons/QuitGame:theme_override_styles/hover:expand_margin_right")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 55.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OptionsButtons/Settings:theme_override_styles/hover:expand_margin_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 55.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("OptionsButtons/StartGame:theme_override_styles/hover:expand_margin_right")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 55.0]
}

[sub_resource type="Animation" id="Animation_xwh6o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OptionsButtons/QuitGame:theme_override_styles/hover:expand_margin_right")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [55.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OptionsButtons/Settings:theme_override_styles/hover:expand_margin_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [55.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("OptionsButtons/StartGame:theme_override_styles/hover:expand_margin_right")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [55.0]
}

[sub_resource type="Animation" id="Animation_qq56j"]
resource_name = "saindo"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OptionsButtons/QuitGame:theme_override_styles/hover:expand_margin_right")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [55.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OptionsButtons/Settings:theme_override_styles/hover:expand_margin_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [55.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("OptionsButtons/StartGame:theme_override_styles/hover:expand_margin_right")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [55.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qq56j"]
_data = {
&"RESET": SubResource("Animation_xwh6o"),
&"entrou": SubResource("Animation_xl12c"),
&"saindo": SubResource("Animation_qq56j")
}

[node name="MenuTemplate" type="Control" node_paths=PackedStringArray("entra_sai_mouse", "animador_de_opcoes_menu")]
layout_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
grow_vertical = 2
size_flags_horizontal = 0
script = ExtResource("1_jl2ug")
entra_sai_mouse = NodePath("AnimadorSelecionado")
animador_de_opcoes_menu = NodePath("AnimadorEntradaOpcoes")
pode_interagir = true

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = -9.0
offset_top = -332.0
offset_right = 1183.0
offset_bottom = 346.0
tooltip_text = "
"
color = Color(0, 0, 0, 0.627451)

[node name="Title Game" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 34.0
offset_top = -119.0
offset_right = 281.0
offset_bottom = -74.0
grow_vertical = 2
alignment = 1

[node name="TemplateNameGame" type="Label" parent="Title Game"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 32
text = "Template Name"
label_settings = SubResource("LabelSettings_1ccxm")

[node name="OptionsButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 37.0
offset_top = -73.0
offset_right = 167.0
offset_bottom = 38.0
grow_vertical = 2
size_flags_horizontal = 4
theme_override_constants/separation = 9

[node name="StartGame" type="Button" parent="OptionsButtons"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/hover = SubResource("StyleBoxFlat_04mby")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xl12c")
theme_override_styles/normal = SubResource("StyleBoxFlat_1ccxm")
text = "Start Game"
alignment = 0

[node name="Settings" type="Button" parent="OptionsButtons"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/hover = SubResource("StyleBoxFlat_04mby")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xl12c")
theme_override_styles/normal = SubResource("StyleBoxFlat_1ccxm")
text = "Settings"
alignment = 0

[node name="QuitGame" type="Button" parent="OptionsButtons"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/hover = SubResource("StyleBoxFlat_04mby")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xl12c")
theme_override_styles/normal = SubResource("StyleBoxFlat_1ccxm")
text = "Quit Game"
alignment = 0

[node name="AnimadorEntradaOpcoes" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_04mby")
}

[node name="AnimadorSelecionado" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_qq56j")
}

[connection signal="mouse_entered" from="OptionsButtons/StartGame" to="." method="_on_start_game_mouse_entered"]
[connection signal="mouse_exited" from="OptionsButtons/StartGame" to="." method="_on_start_game_mouse_exited"]
[connection signal="pressed" from="OptionsButtons/StartGame" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="OptionsButtons/Settings" to="." method="_on_options_mouse_entered"]
[connection signal="mouse_exited" from="OptionsButtons/Settings" to="." method="_on_options_mouse_exited"]
[connection signal="pressed" from="OptionsButtons/Settings" to="." method="_on_options_pressed"]
[connection signal="mouse_entered" from="OptionsButtons/QuitGame" to="." method="_on_quit_game_mouse_entered"]
[connection signal="mouse_exited" from="OptionsButtons/QuitGame" to="." method="_on_quit_game_mouse_exited"]
[connection signal="pressed" from="OptionsButtons/QuitGame" to="." method="_on_quit_game_pressed"]
